--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Project C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Project main.c List.c List.h Cell.h Cell.c)
+add_executable(Project main.c List.c List.h Cell.h Cell.c timer.c timer.h)
